Додає всі модулі та зміст кожного

--- a/Modul-4-JS/index4-Massiv.html
+++ b/Modul-4-JS/index4-Massiv.html
@@ -10,6 +10,18 @@
     <a href="./index4.html">На Главную</a>
     <h1>Модуль 4(Перебирающие методы массива)</h1>
 
+    <h2>Содержание</h2>
+    <ul>
+      <li>forEach</li>
+      <li>map</li>
+      <li>filter</li>
+      <li>find</li>
+      <li>every и some</li>
+      <li>reduce</li>
+      <li>sort</li>
+      <li>Чейнинг методов</li>
+      <li>Библиотека Lodash</li>
+    </ul>
     <!-- <script src="./js/01-foreach.js" type="module"></script> -->
     <!-- <script src="./js/02-map.js" type="module"></script> -->
     <!-- <script src="./js/03-filter.js" type="module"></script> -->
