--- a/Modul-4-JS/index4.html
+++ b/Modul-4-JS/index4.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Callback-функции</title>
+    <title>Модуль 4</title>
     <style>
       body {
         font-family: sans-serif;
@@ -20,7 +20,13 @@
       <li><a href="./index4-Massiv.html">Перебирающие методы массива</a></li>
     </ul>
 
-    <h1>Модуль 4</h1>
+    <h1>Модуль 4 (Callback-функции)</h1>
+    <h2>Содержание</h2>
+    <ul>
+      <li>Callback-функции</li>
+      <li>Замыкания</li>
+      <li>Стрелочные функции</li>
+    </ul>
     <button class="js-button">
       Это кнопка
       <span role="image" aria-label="Иконка волшебника">🧙‍♂️</span>
