--- a/Modul-5-JS/index5-classes.html
+++ b/Modul-5-JS/index5-classes.html
@@ -7,7 +7,23 @@
   </head>
   <body>
     <a href="./index5.html">На Главную</a>
-    <h1>Классы</h1>
+    <h1>Модуль 5 (Классы)</h1>
+    <h2>Содержание</h2>
+    <ul>
+      <li>объявление</li>
+      <li>конструктор</li>
+      <li>методы</li>
+      <li>static</li>
+      <li>приватные свойства</li>
+      <li>синтаксис публичных свойства и методы классов</li>
+    </ul>
+    <h2>Геттеры и сеттеры</h2>
+    <h2>Наследование</h2>
+    <ul>
+      <li>extends</li>
+      <li>super</li>
+    </ul>
+
     <!-- <script src="./js/01-class.js" type="module"></script> -->
     <script src="./js/02-inheritance.js" type="module"></script>
   </body>
