--- a/Modul-5-JS/index5.html
+++ b/Modul-5-JS/index5.html
@@ -35,6 +35,11 @@
       <li><a href="./index5-classes.html">Классы</a></li>
     </ul>
     <h1>Модуль 5</h1>
+    <h2>Содержание</h2>
+    <ul>
+      <li>Ключевое слово this</li>
+      <li>Методы bind, call и apply</li>
+    </ul>
     <div class="counter">
       <button class="js-decrement">Уменьшить</button>
       <p class="js-value">0</p>
