--- a/Modul-5-JS/index5-prototype.html
+++ b/Modul-5-JS/index5-prototype.html
@@ -8,7 +8,15 @@
   </head>
   <body>
     <a href="./index5.html">Назад</a>
-    <h1></h1>
+    <h1>Модуль 5 (Прототипное наследование</h1>
+    <h2>Содержание</h2>
+    <ul>
+      <li>Прототипное наследование</li>
+      <li>Прототип объекта и Object.create()</li>
+      <li>Создание объектов через new - функция-конструктор</li>
+      <li>Статические методы и свойства</li>
+    </ul>
+
     <div id="counter-1">
       <button data-decrement>-</button>
       <span data-value>0</span>
