--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <body>
     <h1>Головна сторінка модулів</h1>
     <ul>
+      <li><a href="./Modul-1-JS/index1.html">Модуль 1</a></li>
+      <li><a href="./Modul-2-JS/index2.html">Модуль 2</a></li>
+      <li><a href="./Modul-3-JS/index3.html">Модуль 3</a></li>
       <li><a href="./Modul-4-JS/index4.html">Модуль 4</a></li>
       <li><a href="./Modul-5-JS/index5.html">Модуль 5</a></li>
       <li><a href="./Modul-6-JS/index6.html">Модуль 6</a></li>
