Додає зміни до файлів(робота над помилками, вдосконалення своїх знань)

--- a/Modul-3-JS/index3.html
+++ b/Modul-3-JS/index3.html
@@ -6,7 +6,11 @@
     <title>Объекты</title>
   </head>
   <body>
-    <a href="../index.html">Назад на Главную</a>
+    <ul>
+      <li><a href="../index.html">Назад на Главную</a></li>
+      <li><a href="./index3Destr.html">Деструктуризация</a></li>
+    </ul>
+
     <h1>Модуль 3 (Объекты)</h1>
 
     <h2>Содержание</h2>
@@ -20,6 +24,6 @@
     <!-- <script src="./js/01-2-methods.js" type="module"></script> -->
     <!-- <script src="./js/01-3-iteration.js" type="module"></script> -->
     <!-- <script src="./js/02-friends.js" type="module"></script> -->
-    <script src="./js/03-cart.js" type="module"></script>
+    <!-- <script src="./js/03-cart.js" type="module"></script> -->
   </body>
 </html>
