--- a/index.html
+++ b/index.html
@@ -5,39 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shpargalka</title>
-    <style>
-      html {
-        position: relative;
-      }
-      body {
-        background-image: linear-gradient(to bottom right, yellow, red);
-      }
-
-      .wrapper {
-        height: 100vh;
-      }
-
-      .custom-shape-divider-bottom-1677091539 {
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        width: 100%;
-        overflow: hidden;
-        line-height: 0;
-      }
-
-      .custom-shape-divider-bottom-1677091539 svg {
-        position: relative;
-        display: block;
-        width: calc(100% + 1.3px);
-        height: 315px;
-        transform: rotateY(180deg);
-      }
-
-      .custom-shape-divider-bottom-1677091539 .shape-fill {
-        fill: #ffffff;
-      }
-    </style>
+    <link rel="stylesheet" href="./css/styles-home-page.css" />
+    <style></style>
   </head>
   <body>
     <section class="wrapper">
@@ -54,21 +23,57 @@
           ></path>
         </svg>
       </div>
-      <h1>Головна сторінка модулів</h1>
-      <ul>
-        <li><a href="./Modul-1-JS/index1.html">Модуль 1</a></li>
-        <li><a href="./Modul-2-JS/index2.html">Модуль 2</a></li>
-        <li><a href="./Modul-3-JS/index3.html">Модуль 3</a></li>
-        <li><a href="./Modul-4-JS/index4.html">Модуль 4</a></li>
-        <li><a href="./Modul-5-JS/index5.html">Модуль 5</a></li>
-        <li><a href="./Modul-6-JS/index6.html">Модуль 6</a></li>
-        <li><a href="./Modul-7-JS/index7.html">Модуль 7</a></li>
-        <li><a href="./Modul-8-JS/index8.html">Модуль 8</a></li>
+      <h1 class="primary-title">Головна сторінка модулів</h1>
+      <ul class="button-list">
         <li>
-          <a href="./Modul6-HomeWork-JS/index.html">Домашнее задание 6</a>
+          <a class="button-list__item" href="./Modul-1-JS/index1.html"
+            >Модуль 1</a
+          >
         </li>
         <li>
-          <a href="./Modul7-HomeWork-JS/index.html">Домашнее задание 7</a>
+          <a class="button-list__item" href="./Modul-2-JS/index2.html"
+            >Модуль 2</a
+          >
+        </li>
+        <li>
+          <a class="button-list__item" href="./Modul-3-JS/index3.html"
+            >Модуль 3</a
+          >
+        </li>
+        <li>
+          <a class="button-list__item" href="./Modul-4-JS/index4.html"
+            >Модуль 4</a
+          >
+        </li>
+        <li>
+          <a class="button-list__item" href="./Modul-5-JS/index5.html"
+            >Модуль 5</a
+          >
+        </li>
+        <li>
+          <a class="button-list__item" href="./Modul-6-JS/index6.html"
+            >Модуль 6</a
+          >
+        </li>
+        <li>
+          <a class="button-list__item" href="./Modul-7-JS/index7.html"
+            >Модуль 7</a
+          >
+        </li>
+        <li>
+          <a class="button-list__item" href="./Modul-8-JS/index8.html"
+            >Модуль 8</a
+          >
+        </li>
+        <li>
+          <a class="button-list__item" href="./Modul6-HomeWork-JS/index.html"
+            >Домашнее задание 6</a
+          >
+        </li>
+        <li>
+          <a class="button-list__item" href="./Modul7-HomeWork-JS/index.html"
+            >Домашнее задание 7</a
+          >
         </li>
       </ul>
     </section>
