Додає стилі на сторінки модулів

--- a/Modul-1-JS/index1-CICLES.html
+++ b/Modul-1-JS/index1-CICLES.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ветвления и циклы</title>
+    <link rel="stylesheet" href="../css/styles-home-page.css" />
   </head>
   <body>
-    <a href="./index1.html">На Главную</a>
-    <h1>Модуль 1 (Ветвления и циклы)</h1>
+    <ul class="button-list">
+      <li><a class="button-list__item" href="./index1.html">На Главную</a></li>
+    </ul>
+
+    <h1 class="primary-title">Модуль 1 (Ветвления и циклы)</h1>
     <h2>Содержание</h2>
     <ul>
       <li>Switch</li>
