--- a/Modul-2-JS/index2.html
+++ b/Modul-2-JS/index2.html
@@ -4,15 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Массивы</title>
+    <link rel="stylesheet" href="../css/styles-home-page.css" />
   </head>
   <body>
-    <ul>
-      <li><a href="../index.html">Назад на Главную</a></li>
-      <li><a href="./index2-Functions.html">Функции</a></li>
+    <ul class="button-list">
+      <li>
+        <a class="button-list__item" href="../index.html">Назад на Главную</a>
+      </li>
+      <li>
+        <a class="button-list__item" href="./index2-Functions.html">Функции</a>
+      </li>
     </ul>
 
-    <h1>Модуль 2 (Массивы)</h1>
-    <h2>Содержание</h2>
+    <h1 class="primary-title">Модуль 2 (Массивы)</h1>
+    <h2 class="primary-title">Содержание</h2>
     <ul>
       <li>Знакомство с массивами</li>
       <li>Ссылочный тип</li>
