--- a/Modul-4-JS/index4-Massiv.html
+++ b/Modul-4-JS/index4-Massiv.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Перебирающие методы массива</title>
+    <link rel="stylesheet" href="../css/styles-home-page.css">
   </head>
 
   <body>
-    <a href="./index4.html">На Главную</a>
-    <h1>Модуль 4(Перебирающие методы массива)</h1>
+    <ul class="button-list">
+      <li><a class="button-list__item" href="./index4.html">На Главную</a></li>
+    </ul>
+    <h1 class="primary-title">Модуль 4(Перебирающие методы массива)</h1>
 
-    <h2>Содержание</h2>
+    <h2 class="primary-title">Содержание</h2>
     <ul>
       <li>forEach</li>
       <li>map</li>
