--- a/Modul-4-JS/index4.html
+++ b/Modul-4-JS/index4.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Модуль 4</title>
+    <link rel="stylesheet" href="../css/styles-home-page.css" />
     <style>
       body {
         font-family: sans-serif;
@@ -15,13 +16,19 @@
     </style>
   </head>
   <body>
-    <ul>
-      <li><a href="../index.html">Назад на Главную</a></li>
-      <li><a href="./index4-Massiv.html">Перебирающие методы массива</a></li>
+    <ul class="button-list">
+      <li>
+        <a class="button-list__item" href="../index.html">Назад на Главную</a>
+      </li>
+      <li>
+        <a class="button-list__item" href="./index4-Massiv.html"
+          >Перебирающие методы массива</a
+        >
+      </li>
     </ul>
 
-    <h1>Модуль 4 (Callback-функции)</h1>
-    <h2>Содержание</h2>
+    <h1 class="primary-title">Модуль 4 (Callback-функции)</h1>
+    <h2 class="primary-title">Содержание</h2>
     <ul>
       <li>Callback-функции</li>
       <li>Замыкания</li>
