--- a/Modul-5-JS/index5-classes.html
+++ b/Modul-5-JS/index5-classes.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>«Классы»</title>
+    <link rel="stylesheet" href="../css/styles-home-page.css">
   </head>
   <body>
-    <a href="./index5.html">На Главную</a>
-    <h1>Модуль 5 (Классы)</h1>
-    <h2>Содержание</h2>
+    <ul class="button-list">
+      <li><a class="button-list__item" href="./index5.html">На Главную</a></li>
+    </ul>
+    <h1 class="primary-title">Модуль 5 (Классы)</h1>
+    <h2 class="primary-title">Содержание</h2>
     <ul>
       <li>объявление</li>
       <li>конструктор</li>
@@ -17,8 +20,8 @@
       <li>приватные свойства</li>
       <li>синтаксис публичных свойства и методы классов</li>
     </ul>
-    <h2>Геттеры и сеттеры</h2>
-    <h2>Наследование</h2>
+    <h2 class="primary-title">Геттеры и сеттеры</h2>
+    <h2 class="primary-title">Наследование</h2>
     <ul>
       <li>extends</li>
       <li>super</li>
