--- a/Modul-6-JS/03-classlist.html
+++ b/Modul-6-JS/03-classlist.html
@@ -5,9 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>classList*</title>
     <link rel="stylesheet" href="../css/styles.css" />
+    <link rel="stylesheet" href="../css/styles-home-page.css">
   </head>
   <body>
-    <p><a href="./index6.html">На главную</a></p>
+    <ul class="button-list">
+      <li><a class="button-list__item" href="./index6.html">На главную</a></li>
+    </ul>
 
     <button type="button" class="magic-btn js-magic-btn">
       Сделать магию
