--- a/Modul-1-JS/index1.html
+++ b/Modul-1-JS/index1.html
@@ -4,11 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Переменные, типы и ветвления</title>
+    <link rel="stylesheet" href="../css/styles-home-page.css" />
   </head>
   <body>
-    <a href="../index.html">Назад на Главную</a>
-    <h1>Модуль 1 (Переменные и ветвления)</h1>
-    <a href="./index1-CICLES.html">Модуль 1 (Ветвления и циклы)</a>
+    <ul class="button-list">
+      <li>
+        <a class="button-list__item" href="../index.html">Назад на Главную</a>
+      </li>
+      <li>
+        <a class="button-list__item" href="./index1-CICLES.html"
+          >Модуль 1 (Ветвления и циклы)</a
+        >
+      </li>
+    </ul>
+    <h1 class="primary-title">Модуль 1 (Переменные и ветвления)</h1>
     <h2>Содержание</h2>
     <ul>
       <li>Выражения, инструкции и точка с запятой</li>
