--- a/Modul-2-JS/index2-Functions.html
+++ b/Modul-2-JS/index2-Functions.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Функции</title>
+    <link rel="stylesheet" href="../css/styles-home-page.css">
   </head>
   <body>
-    <a href="./index2.html">На главную</a>
-    <h1>Модуль 2 (Функции)</h1>
+    <ul class="button-list">
+      <li><a class="button-list__item" href="./index2.html">На главную</a></li>
+    </ul>
+    <h1 class="primary-title">Модуль 2 (Функции)</h1>
 
-    <h2>Содержание</h2>
+    <h2 class="primary-title">Содержание</h2>
     <ul>
       <li>Знакомство с функциями</li>
       <li>Стек вызовов</li>
