--- a/Modul-3-JS/index3.html
+++ b/Modul-3-JS/index3.html
@@ -4,16 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Объекты</title>
+    <link rel="stylesheet" href="../css/styles-home-page.css" />
   </head>
   <body>
-    <ul>
-      <li><a href="../index.html">Назад на Главную</a></li>
-      <li><a href="./index3Destr.html">Деструктуризация</a></li>
+    <ul class="button-list">
+      <li>
+        <a class="button-list__item" href="../index.html">Назад на Главную</a>
+      </li>
+      <li>
+        <a class="button-list__item" href="./index3Destr.html"
+          >Деструктуризация</a
+        >
+      </li>
     </ul>
 
-    <h1>Модуль 3 (Объекты)</h1>
+    <h1 class="primary-title">Модуль 3 (Объекты)</h1>
 
-    <h2>Содержание</h2>
+    <h2 class="primary-title">Содержание</h2>
     <ul>
       <li>Объекты, создание через литерал</li>
       <li>Свойства и методы объекта</li>
