--- a/Modul-3-JS/index3Destr.html
+++ b/Modul-3-JS/index3Destr.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Объекты</title>
+    <link rel="stylesheet" href="../css/styles-home-page.css" />
   </head>
   <body>
-    <a href="./index3.html">На Главную</a>
-    <h1>Модуль 3 (Деструктуризация)</h1>
-    <h2>Содержание</h2>
+    <ul class="button-list">
+      <li><a class="button-list__item" href="./index3.html">На Главную</a></li>
+    </ul>
+    <h1 class="primary-title">Модуль 3 (Деструктуризация)</h1>
+    <h2 class="primary-title">Содержание</h2>
     <ul>
       <li>Операция spread</li>
       <li>Деструктуризация и операция rest</li>
