--- a/Modul-5-JS/index5-prototype.html
+++ b/Modul-5-JS/index5-prototype.html
@@ -5,11 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Прототипное наследование</title>
     <link rel="stylesheet" href="../css/styles.css" />
+    <link rel="stylesheet" href="../css/styles-home-page.css" />
   </head>
   <body>
-    <a href="./index5.html">Назад</a>
-    <h1>Модуль 5 (Прототипное наследование</h1>
-    <h2>Содержание</h2>
+    <ul class="button-list">
+      <li><a class="button-list__item" href="./index5.html">На главную</a></li>
+    </ul>
+    <h1 class="primary-title">Модуль 5 (Прототипное наследование</h1>
+    <h2 class="primary-title">Содержание</h2>
     <ul>
       <li>Прототипное наследование</li>
       <li>Прототип объекта и Object.create()</li>
