--- a/Modul-5-JS/index5.html
+++ b/Modul-5-JS/index5.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ключевое слово this</title>
+    <link rel="stylesheet" href="../css/styles-home-page.css" />
     <style>
       body {
         font-family: sans-serif;
@@ -29,13 +30,21 @@
     </style>
   </head>
   <body>
-    <ul>
-      <li><a href="../index.html">Назад на Главную</a></li>
-      <li><a href="./index5-prototype.html">Прототипы</a></li>
-      <li><a href="./index5-classes.html">Классы</a></li>
+    <ul class="button-list">
+      <li>
+        <a class="button-list__item" href="../index.html">Назад на Главную</a>
+      </li>
+      <li>
+        <a class="button-list__item" href="./index5-prototype.html"
+          >Прототипы</a
+        >
+      </li>
+      <li>
+        <a class="button-list__item" href="./index5-classes.html">Классы</a>
+      </li>
     </ul>
-    <h1>Модуль 5</h1>
-    <h2>Содержание</h2>
+    <h1 class="primary-title">Модуль 5</h1>
+    <h2 class="primary-title">Содержание</h2>
     <ul>
       <li>Ключевое слово this</li>
       <li>Методы bind, call и apply</li>
