--- a/Modul-6-JS/02-forms.html
+++ b/Modul-6-JS/02-forms.html
@@ -7,9 +7,12 @@
     <title>Событие сабмита формы</title>
     <link rel="stylesheet" href="../css/styles.css" />
     <link rel="stylesheet" href="../css/common.css" />
+    <link rel="stylesheet" href="../css/styles-home-page.css" />
   </head>
   <body>
-    <p><a href="./index6.html">На главную</a></p>
+    <ul class="button-list">
+      <li><a class="button-list__item" href="./index6.html">На главную</a></li>
+    </ul>
 
     <!-- Событие сабмита формы -->
     <form class="js-register-form" autocomplete="off">
