--- a/Modul-6-JS/03-input-events.html
+++ b/Modul-6-JS/03-input-events.html
@@ -7,9 +7,12 @@
     <title>События инпутов</title>
     <link rel="stylesheet" href="../css/styles.css" />
     <link rel="stylesheet" href="../css/common.css" />
+    <link rel="stylesheet" href="../css/styles-home-page.css" />
   </head>
   <body>
-    <p><a href="./index6.html">На главную</a></p>
+    <ul class="button-list">
+      <li><a class="button-list__item" href="./index6.html">На главную</a></li>
+    </ul>
 
     <!-- <form action="" autocomplete="off"> -->
     <label>
