--- a/Modul-6-JS/04-keyboard-events.html
+++ b/Modul-6-JS/04-keyboard-events.html
@@ -7,6 +7,7 @@
     <title>События клавиатуры</title>
     <link rel="stylesheet" href="../css/styles.css" />
     <link rel="stylesheet" href="../css/common.css" />
+    <link rel="stylesheet" href="../css/styles-home-page.css" />
     <style>
       .output {
         font-size: 24px;
@@ -14,7 +15,9 @@
     </style>
   </head>
   <body>
-    <p><a href="./index6.html">На главную</a></p>
+    <ul class="button-list">
+      <li><a class="button-list__item" href="./index6.html">На главную</a></li>
+    </ul>
 
     <button class="js-clear">Очистить</button>
     <p class="output js-output"></p>
