--- a/Modul-6-JS/05-mouse-events.html
+++ b/Modul-6-JS/05-mouse-events.html
@@ -7,6 +7,7 @@
     <title>События мыши</title>
     <link rel="stylesheet" href="../css/styles.css" />
     <link rel="stylesheet" href="../css/common.css" />
+    <link rel="stylesheet" href="../css/styles-home-page.css">
     <style>
       .box {
         display: flex;
@@ -30,7 +31,9 @@
     </style>
   </head>
   <body>
-    <p><a href="./index6.html">На главную</a></p>
+    <ul class="button-list">
+      <li><a class="button-list__item" href="./index6.html">На главную</a></li>
+    </ul>
 
     <div class="box js-box">
       <div class="inner-box"></div>
