--- a/Modul-6-JS/index6.html
+++ b/Modul-6-JS/index6.html
@@ -7,28 +7,78 @@
     <title>Модуль 6</title>
     <link rel="stylesheet" href="../css/common.css" />
     <link rel="stylesheet" href="../css/styles.css" />
+    <link rel="stylesheet" href="../css/styles-home-page.css" />
   </head>
   <body>
-    <a href="../index.html">Назад на Главную</a>
-    <h1>Модуль 6(Обьектная модель документа)</h1>
-    <ul>
-      <li><a href="./01-event-listeners.html">Слушатели событий</a></li>
-      <li><a href="./02-forms.html">Формы</a></li>
-      <li><a href="./03-input-events.html">События Инпутов</a></li>
-      <li><a href="./04-keyboard-events.html">События клавиатуры</a></li>
-      <li><a href="./05-mouse-events.html">События мыши</a></li>
+    <ul class="button-list">
+      <li>
+        <a class="button-list__item" href="../index.html">Назад на Главную</a>
+      </li>
     </ul>
-    <h2>Модуль 6(События)</h2>
-    <ul>
-      <li><a href="./01-query-selectors.html">querySelector</a></li>
-      <li><a href="./02-properties.html">Свойства элемента</a></li>
-      <li><a href="./03-classlist.html">classList</a></li>
-      <li><a href="./04-dom-traversal.html">Свойство «навигации» по DOM</a></li>
-      <li><a href="./05-creating-elements.html">Создание элементов</a></li>
-      <li><a href="./06-collections.html">Создание коллекции элементов</a></li>
-      <li><a href="./07-products.html">Товары</a></li>
-      <li><a href="./08-templating.html">Парс строк</a></li>
-      <li><a href="./09-transactions.html">Таблица транзакций строк</a></li>
+
+    <h1 class="primary-title">Модуль 6(Обьектная модель документа)</h1>
+    <ul class="button-list">
+      <li>
+        <a class="button-list__item" href="./01-event-listeners.html"
+          >Слушатели событий</a
+        >
+      </li>
+      <li><a class="button-list__item" href="./02-forms.html">Формы</a></li>
+      <li>
+        <a class="button-list__item" href="./03-input-events.html"
+          >События Инпутов</a
+        >
+      </li>
+      <li>
+        <a class="button-list__item" href="./04-keyboard-events.html"
+          >События клавиатуры</a
+        >
+      </li>
+      <li>
+        <a class="button-list__item" href="./05-mouse-events.html"
+          >События мыши</a
+        >
+      </li>
+    </ul>
+    <h2 class="primary-title">Модуль 6(События)</h2>
+    <ul class="button-list">
+      <li>
+        <a class="button-list__item" href="./01-query-selectors.html"
+          >querySelector</a
+        >
+      </li>
+      <li>
+        <a class="button-list__item" href="./02-properties.html"
+          >Свойства элемента</a
+        >
+      </li>
+      <li>
+        <a class="button-list__item" href="./03-classlist.html">classList</a>
+      </li>
+      <li>
+        <a class="button-list__item" href="./04-dom-traversal.html"
+          >Свойство «навигации» по DOM</a
+        >
+      </li>
+      <li>
+        <a class="button-list__item" href="./05-creating-elements.html"
+          >Создание элементов</a
+        >
+      </li>
+      <li>
+        <a class="button-list__item" href="./06-collections.html"
+          >Создание коллекции элементов</a
+        >
+      </li>
+      <li><a class="button-list__item" href="./07-products.html">Товары</a></li>
+      <li>
+        <a class="button-list__item" href="./08-templating.html">Парс строк</a>
+      </li>
+      <li>
+        <a class="button-list__item" href="./09-transactions.html"
+          >Таблица транзакций строк</a
+        >
+      </li>
     </ul>
   </body>
 </html>
