Опрацювання 4-го модуля

--- a/Modul-3-JS/index3Destr.html
+++ b/Modul-3-JS/index3Destr.html
@@ -16,9 +16,10 @@
       <li>Операция spread</li>
       <li>Деструктуризация и операция rest</li>
     </ul>
+    <div class="card"></div>
     <!-- <script src="./js/01-spread.js" type="module"></script> -->
     <!-- <script src="./js/02-destructuring.js" type="module"></script> -->
     <!-- <script src="./js/03-markup.js" type="module"></script> -->
-    <!-- <script src="./js/04-cart.js" type="module"></script> -->
+    <script src="./js/04-cart.js" type="module"></script>
   </body>
 </html>
