--- a/Modul-4-JS/index4-Massiv.html
+++ b/Modul-4-JS/index4-Massiv.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Перебирающие методы массива</title>
-    <link rel="stylesheet" href="../css/styles-home-page.css">
+    <link rel="stylesheet" href="../css/styles-home-page.css" />
   </head>
 
   <body>
@@ -26,10 +26,10 @@
       <li>Библиотека Lodash</li>
     </ul>
     <!-- <script src="./js/01-foreach.js" type="module"></script> -->
-    <script src="./js/02-map.js" type="module"></script>
+    <!-- <script src="./js/02-map.js" type="module"></script> -->
     <!-- <script src="./js/03-filter.js" type="module"></script> -->
     <!-- <script src="./js/04-find.js" type="module"></script> -->
-    <!-- <script src="./js/05-every-some.js" type="module"></script> -->
+    <script src="./js/05-every-some.js" type="module"></script>
     <!-- <script src="./js/06-reduce.js" type="module"></script> -->
     <!-- <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.20/lodash.min.js"></script> -->
     <!-- <script src="./js/01-sort.js" type="module"></script> -->
