--- a/Modul-4-JS/index4-Massiv.html
+++ b/Modul-4-JS/index4-Massiv.html
@@ -29,8 +29,8 @@
     <!-- <script src="./js/02-map.js" type="module"></script> -->
     <!-- <script src="./js/03-filter.js" type="module"></script> -->
     <!-- <script src="./js/04-find.js" type="module"></script> -->
-    <script src="./js/05-every-some.js" type="module"></script>
-    <!-- <script src="./js/06-reduce.js" type="module"></script> -->
+    <!-- <script src="./js/05-every-some.js" type="module"></script> -->
+    <script src="./js/06-reduce.js" type="module"></script>
     <!-- <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.20/lodash.min.js"></script> -->
     <!-- <script src="./js/01-sort.js" type="module"></script> -->
     <!-- <script src="./js/02-flat.js" type="module"></script> -->
