--- a/Modul-8-JS/index8.html
+++ b/Modul-8-JS/index8.html
@@ -6,7 +6,11 @@
     <title>Настраиваем Parcel</title>
   </head>
   <body>
-    <a href="../index.html">Назад на Главную</a>
+    <ul>
+      <li><a href="../index.html">Назад на Главную</a></li>
+      <li><a href="./index8-1.html">Шаблонизация</a></li>
+    </ul>
+
     <h1>Модуль 8 (Проверяет перезагрузку веб-сервера)</h1>
     <h2>Содержание</h2>
     <ul>
