--- a/Modul-8-JS/01-localstorage.html
+++ b/Modul-8-JS/01-localstorage.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <p><a href="index8-1.html">На главную</a></p>
-
+    <h1 class="arishka">a</h1>
     <script src="./js/01-localstorage.js"></script>
   </body>
 </html>
