--- a/Modul-8-JS/index8-1.html
+++ b/Modul-8-JS/index8-1.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <ul>
+      <li><a href="./index8.html">Назад на главную</a></li>
       <li><a href="01-localstorage.html">Локальное хранилище</a></li>
       <li><a href="02-feedback.html">Мастерская: форма отзыва</a></li>
       <li><a href="03-colorpicker.html">Колорпикер</a></li>
