--- a/index.html
+++ b/index.html
@@ -6,76 +6,67 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shpargalka</title>
     <link rel="stylesheet" href="./css/styles-home-page.css" />
-    <style></style>
   </head>
   <body>
-    <section class="wrapper">
-      <div class="custom-shape-divider-bottom-1677091539">
-        <svg
-          data-name="Layer 1"
-          xmlns="http://www.w3.org/2000/svg"
-          viewBox="0 0 1200 120"
-          preserveAspectRatio="none"
+    <h1 class="primary-title">Головна сторінка модулів</h1>
+    <ul class="button-list">
+      <li>
+        <a class="button-list__item" href="./Modul-1-JS/index1.html"
+          >Модуль 1</a
         >
-          <path
-            d="M985.66,92.83C906.67,72,823.78,31,743.84,14.19c-82.26-17.34-168.06-16.33-250.45.39-57.84,11.73-114,31.07-172,41.86A600.21,600.21,0,0,1,0,27.35V120H1200V95.8C1132.19,118.92,1055.71,111.31,985.66,92.83Z"
-            class="shape-fill"
-          ></path>
-        </svg>
-      </div>
-      <h1 class="primary-title">Головна сторінка модулів</h1>
-      <ul class="button-list">
-        <li>
-          <a class="button-list__item" href="./Modul-1-JS/index1.html"
-            >Модуль 1</a
-          >
-        </li>
-        <li>
-          <a class="button-list__item" href="./Modul-2-JS/index2.html"
-            >Модуль 2</a
-          >
-        </li>
-        <li>
-          <a class="button-list__item" href="./Modul-3-JS/index3.html"
-            >Модуль 3</a
-          >
-        </li>
-        <li>
-          <a class="button-list__item" href="./Modul-4-JS/index4.html"
-            >Модуль 4</a
-          >
-        </li>
-        <li>
-          <a class="button-list__item" href="./Modul-5-JS/index5.html"
-            >Модуль 5</a
-          >
-        </li>
-        <li>
-          <a class="button-list__item" href="./Modul-6-JS/index6.html"
-            >Модуль 6</a
-          >
-        </li>
-        <li>
-          <a class="button-list__item" href="./Modul-7-JS/index7.html"
-            >Модуль 7</a
-          >
-        </li>
-        <li>
-          <a class="button-list__item" href="./Modul-8-JS/index8.html"
-            >Модуль 8</a
-          >
-        </li>
-        <li>
-          <a class="button-list__item" href="./Modul6-HomeWork-JS/index.html"
-            >Домашнее задание 6</a
-          >
-        </li>
-        <li>
-          <a class="button-list__item" href="./Modul7-HomeWork-JS/index.html"
-            >Домашнее задание 7</a
-          >
-        </li>
-      </ul>
-    </section>
+      </li>
+      <li>
+        <a class="button-list__item" href="./Modul-2-JS/index2.html"
+          >Модуль 2</a
+        >
+      </li>
+      <li>
+        <a class="button-list__item" href="./Modul-3-JS/index3.html"
+          >Модуль 3</a
+        >
+      </li>
+      <li>
+        <a class="button-list__item" href="./Modul-4-JS/index4.html"
+          >Модуль 4</a
+        >
+      </li>
+      <li>
+        <a class="button-list__item" href="./Modul-5-JS/index5.html"
+          >Модуль 5</a
+        >
+      </li>
+      <li>
+        <a class="button-list__item" href="./Modul-6-JS/index6.html"
+          >Модуль 6</a
+        >
+      </li>
+      <li>
+        <a class="button-list__item" href="./Modul-7-JS/index7.html"
+          >Модуль 7</a
+        >
+      </li>
+      <li>
+        <a class="button-list__item" href="./Modul-8-JS/index8.html"
+          >Модуль 8</a
+        >
+      </li>
+      <li>
+        <a class="button-list__item" href="./Modul-9-JS/index9.html"
+          >Модуль 9</a
+        >
+      </li>
+      <li>
+        <a class="button-list__item" href="./Modul6-HomeWork-JS/index.html"
+          >Домашнее задание 6</a
+        >
+      </li>
+      <li>
+        <a class="button-list__item" href="./Modul7-HomeWork-JS/index.html"
+          >Домашнее задание 7</a
+        >
+      </li>
+    </ul>
+
+    <script src="./space.js" type="module"></script>
   </body>
 </html>
