Оновлює головну сторінку модулів

--- a/src/index.html
+++ b/src/index.html
@@ -64,9 +64,7 @@
       ><a class="nav-tab" href="#modul-10">Модуль 10</a
       ><a class="nav-tab" href="#modul-11">Модуль 11</a
       ><a class="nav-tab" href="#modul-6-hw">Домашнее задание 6</a
-      ><a class="nav-tab" href="./Modul7-HomeWork-JS/index.html"
-        >Домашнее задание 7</a
-      >
+      ><a class="nav-tab" href="#modul-7-hw">Домашнее задание 7</a>
       <a class="nav-tab" href="#tab-typescript">Домашнее задание 8</a
       ><a class="nav-tab" href="#tab-vite">Домашнее задание 9</a>
       <a class="nav-tab" href="#tab-typescript">Домашнее задание 10</a
@@ -123,9 +121,10 @@
           >Домашнее задание Модуль 6</a
         >
       </section>
-      <section class="slider" id="tab-vite">
-        <a class="title" href="./">Модуль 5</a>
-        <h2>a frontend build tool</h2>
+      <section class="slider" id="modul-7-hw">
+        <a class="title" href="./Modul7-HomeWork-JS/index.html"
+          >Домашнее задание 7</a
+        >
       </section>
       <canvas class="background"></canvas>
     </main>
