--- a/src/index.html
+++ b/src/index.html
@@ -62,13 +62,14 @@
       ><a class="nav-tab" href="#modul-8">Модуль 8</a
       ><a class="nav-tab" href="#modul-9">Модуль 9</a
       ><a class="nav-tab" href="#modul-10">Модуль 10</a
-      ><a class="nav-tab" href="#modul-11">Модуль 11</a
-      ><a class="nav-tab" href="#modul-6-hw">Домашнее задание 6</a
+      ><a class="nav-tab" href="#modul-11">Модуль 11</a>
+      <!-- <a class="nav-tab" href="#modul-6-hw">Домашнее задание 6</a
       ><a class="nav-tab" href="#modul-7-hw">Домашнее задание 7</a>
       <a class="nav-tab" href="#tab-typescript">Домашнее задание 8</a
       ><a class="nav-tab" href="#tab-vite">Домашнее задание 9</a>
       <a class="nav-tab" href="#tab-typescript">Домашнее задание 10</a
-      ><a class="nav-tab" href="#tab-vite">Домашнее задание 11</a>
+      ><a class="nav-tab" href="#tab-vite">Домашнее задание 11</a> -->
+      <a class="nav-tab" href="#presentation">Презентация Life Group</a>
       <span class="nav-tab-slider"></span>
     </div>
     <main class="main">
@@ -124,6 +125,11 @@
       <section class="slider" id="modul-7-hw">
         <a class="title" href="./Modul7-HomeWork-JS/index.html"
           >Домашнее задание 7</a
+        >
+      </section>
+      <section class="slider" id="presentation">
+        <a class="title" href="./Presentation/Presentation.html"
+          >Презентация Life Group</a
         >
       </section>
       <canvas class="background"></canvas>
